--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -24,6 +24,46 @@ ul {
 
 }
 
+/*** Modal ***/
+div.modal {
+
+	position: fixed;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 25, 0.75);
+
+}
+
+div.modal_window {
+
+	margin: 5% auto;
+	width: 500px;
+	height: 500px;
+	border-radius: 8px;
+	background-color: #fff;
+	color: #222;
+
+}
+
+.modal_exit {
+
+	float: right;
+	color: #ff0000;
+	font-size: 1.25em;
+	padding: 5px;
+	cursor: pointer;
+
+}
+
+.modal_exit:hover {
+
+	color: rgba(255, 0, 0, 0.5);
+
+}
+
 /*** Header ***/
 .logo_img {
 
