--- a/client/ui/header/header.css
+++ b/client/ui/header/header.css
@@ -2,7 +2,7 @@
 
 div.admin_panel {
 
-	background-color: #ff0000;
+	background-color: rgba(255, 0, 0, 0.75);
 	color: #2b285f;
 	text-align: center;
 
