--- a/client/ui/header/header.css
+++ b/client/ui/header/header.css
@@ -2,8 +2,8 @@
 
 div.admin_panel {
 
-	background-color: rgba(255, 0, 0, 0.75);
-	color: #2b285f;
+	background-color: #333;
+	color: #fff;
 	text-align: center;
 
 }
