--- a/client/ui/about/about.css
+++ b/client/ui/about/about.css
@@ -1,12 +1,13 @@
 section.about {
 
 	margin-top: 3%;
+	margin-bottom: 25%;
 
 }
 
 section.about h2 {
 
-	font-size: 1.5em;
+	font-size: 2em;
 	text-align: center;
 
 }
