--- a/client/ui/main.css
+++ b/client/ui/main.css
@@ -22,12 +22,32 @@ body {
 h2 {
 
 	font-weight: normal;
+	font-size: 1.25em;
+
+}
+
+p {
+
+	font-size: 1em;
 
 }
 
 ul {
 
 	padding: 0;
+
+}
+
+input {
+
+	border-radius: 4px;
+	font-size: 1em;
+
+}
+
+button {
+
+	border-radius: 4px;
 
 }
 
