Admin panel users added

--- a/client/ui/contacts/contacts.css
+++ b/client/ui/contacts/contacts.css
@@ -161,5 +161,14 @@ form.contact_form button {
 .alert-note {
 
 	color: #ff0000;
+	display: none;
+
+}
+
+p.contact_form_sent {
+
+	text-align: center;
+	color: green;
+	display: none;
 
 }
