--- a/client/ui/header/header.css
+++ b/client/ui/header/header.css
@@ -2,7 +2,7 @@
 
 .active {
 
-	color: #ff0000;
+	color: #ff0000!important;
 
 }
 
@@ -10,13 +10,40 @@ div.admin_panel {
 
 	background-color: #333;
 	color: #fff;
-	text-align: center;
 
 }
 
 div.admin_panel p {
 
 	margin: 0;
+
+}
+
+ul.admin_menu {
+
+	margin: 0;
+
+}
+
+ul.admin_menu li {
+
+	display: inline;
+	padding: 5px;
+
+}
+
+ul.admin_menu a {
+
+	color: #fff;
+	text-decoration: none;
+	font-weight: bold;
+
+}
+
+ul.admin_menu a:hover {
+
+	color: #ff0000;
+	text-decoration: underline;
 
 }
 
@@ -70,6 +97,15 @@ span.upper_hover:hover {
 
 }
 
+.fixed {
+
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 100;
+
+}
+
 nav {
 
 	clear: both;
@@ -82,7 +118,7 @@ nav {
 nav ul {
 
 	text-align: center;
-
+	position: relative;
 
 }
 
@@ -223,5 +259,27 @@ nav a:hover {
 		display: none;
 
 	}
+
+}
+
+ul.products_ref {
+
+	display: none;
+	font-size: 0.55em;
+	position: absolute;
+	background-color: #2b285f;
+	min-width: 250px;
+	padding: 5px;
+	margin-top: 10px;
+	margin-left: -2%;
+	border: 1px solid #fff;
+	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.5);
+	z-index: 1;
+
+}
+
+ul.products_ref li {
+
+	display: block;
 
 }
