--- a/client/ui/header/header.css
+++ b/client/ui/header/header.css
@@ -268,10 +268,9 @@ ul.products_ref {
 	font-size: 0.55em;
 	position: absolute;
 	background-color: #2b285f;
-	min-width: 250px;
+	min-width: 300px;
 	padding: 5px;
-	margin-top: 10px;
-	margin-left: -2%;
+	margin-left: -4%;
 	border: 1px solid #fff;
 	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.5);
 	z-index: 1;
@@ -281,5 +280,32 @@ ul.products_ref {
 ul.products_ref li {
 
 	display: block;
+
+}
+
+ul.biomodels_list {
+
+	display: none;
+	font-size: 0.55em;
+	position: absolute;
+	background-color: #2b285f;
+	min-width: 300px;
+	padding: 5px;
+	margin-left: -4%;
+	border: 1px solid #fff;
+	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.5);
+	z-index: 1;
+
+}
+
+ul.biomodels_list li {
+
+	display: block;
+
+}
+
+img.biomodels_hpic:hover {
+
+	border: 1px solid #ff0000;
 
 }
