--- a/client/ui/products/products.css
+++ b/client/ui/products/products.css
@@ -14,19 +14,193 @@ section#manual h2 {
 
 div.manual_step {
 
-	margin: 25px auto;
+	margin: 50px auto;
+
+}
+
+div.photo_index {
+
+	position: relative;
+	float: left;
+	margin-right: 25px;
 
 }
 
 div.index {
 
-	background-color: #2b285f;
+	background-color: #ff0000;
 	color: #fff;
 	-webkit-border-radius: 30px;
     -moz-border-radius: 30px;
 	border-radius: 30px;
 	height: 60px;
 	width: 60px;
-	font-size: 1em;
+	font-size: 1.5em;
+	font-weight: bold;
+	padding-top: 15px;
+	position: absolute;
+	bottom: 5px;
+	left: 0;
 
 }
+
+div.single_index {
+
+	padding-left: 23px;
+
+}
+
+div.double_index {
+
+	padding-left: 15px;
+
+}
+
+button#print_manual {
+
+	margin: 25px auto;
+	padding: 10px;
+	font-size: 1.5em;
+	color: #333;
+	background-color: #fff;
+	border-radius: 8px;
+	display: table;
+	cursor: pointer;
+
+}
+
+@media (min-width: 768px) {
+
+	div.photo_index img {
+
+		height: 200px;
+
+	}
+
+}
+
+@media (max-width: 767px) {
+
+	div.photo_index img {
+
+		width: 100%;
+
+	}
+
+}
+
+/*** Admin components ***/
+
+h1.add_step {
+
+	text-align: right;
+	color: #ff0000;
+	border: 2px solid #ff0000;
+	padding: 5px;
+	cursor: pointer;
+
+}
+
+h1.add_step:hover {
+
+	background-color: #2b285f;
+
+}
+
+h1.add_step:active {
+
+	border: 1px solid #fff;
+
+}
+
+button.delete_step {
+
+	border: none;
+	background-color: #ff0000;
+	color: #fff;
+	font-size: 1.25em;
+	padding: 5px;
+	cursor: pointer;
+
+}
+
+button.delete_step:hover {
+
+	color: #333;
+
+}
+
+button.delete_step:active {
+
+	border: 1px solid #2b285f;
+
+}
+
+section.new_step {
+
+	padding: 10px;
+	margin: 50px auto;
+	width: 90%;
+
+}
+
+section.new_step input, textarea {
+
+	width: 100%;
+	margin-bottom: 10px;
+	padding: 5px;
+	font-size: 1.2em;
+
+}
+
+button.add_step_photos {
+
+	color: #fff;
+	background-color: #2b285f;
+	font-size: 1.25em;
+	padding: 5px;
+	text-align: center;
+	margin-bottom: 10px;
+
+}
+
+button.save_step, button.add_step_photo {
+
+	color: #333;
+	background-color: #fff;
+	font-size: 1.25em;
+	padding: 5px;
+	text-align: center;
+	margin-bottom: 10px;
+
+}
+
+div.new_step_photo {
+
+	margin: 10px;
+	float: left!important;
+
+}
+
+section.new_step div i {
+
+	float: right;
+	color: red;
+	cursor: pointer;
+
+}
+
+section.new_step div i:hover {
+
+	color: rgba(255, 0, 0, 0.5);
+
+}
+
+div#new_step_photos {
+
+	margin-bottom: 50px;
+	clear: both;
+
+}
+
+/*** End of Admin components ***/
