--- a/client/ui/simulators/simulators.css
+++ b/client/ui/simulators/simulators.css
@@ -1,3 +1,154 @@
+section#simulators {
+
+	margin-top: 3%;
+	margin-bottom: 25%;
+
+}
+
+section#simulators h2 {
+
+	font-size: 2em;
+	text-align: center;
+
+}
+
+div.each_simulator {
+
+	clear: both;
+	padding: 10px;
+
+}
+
+div.each_simulator h3 {
+
+	color: #333;
+
+}
+
+div.each_simulator img {
+
+	float: left;
+	margin-right: 25px;
+	margin-bottom: 10px;
+	max-width: 640px;
+
+}
+
+div.each_simulator p {
+
+	padding: 10px;
+
+}
+
+span.each_simulator_description {
+
+	border: 2px solid #333;
+	border-radius: 8px;
+	padding: 10px;
+	display: inline-block;
+
+}
+
+button.add_to_cart {
+
+	font-size: 1.2em;
+	padding: 5px;
+	color: #333;
+	background-color: #fff;
+	cursor: pointer;
+
+}
+
+p.cart_alert {
+
+	color: red;
+	display: none;
+
+}
+
+/*** Admin components ***/
+
+h1.simulator_add {
+
+	text-align: right;
+	color: #ff0000;
+	border: 2px solid #ff0000;
+	padding: 5px;
+	cursor: pointer;
+
+}
+
+h1.simulator_add:hover {
+
+	background-color: #2b285f;
+
+}
+
+h1.simulator_add:active {
+
+	border: 1px solid #fff;
+
+}
+
+button.delete_simulator {
+
+	border: none;
+	background-color: #ff0000;
+	color: #fff;
+	font-size: 1.25em;
+	padding: 5px;
+	cursor: pointer;
+
+}
+
+button.delete_simulator:hover {
+
+	color: #333;
+
+}
+
+button.delete_simulator:active {
+
+	border: 1px solid #2b285f;
+
+}
+
+section.new_simulator {
+
+	padding: 10px;
+	margin: 50px auto;
+	width: 90%;
+
+}
+
+section.new_simulator input, textarea {
+
+	width: 100%;
+	margin-bottom: 10px;
+	padding: 5px;
+	font-size: 1.2em;
+
+}
+
+input#submit {
+
+	background-color: #fff;
+
+}
+
+button.save_simulator {
+
+	color: #333;
+	background-color: #fff;
+	font-size: 1.25em;
+	padding: 5px;
+	text-align: center;
+	margin-bottom: 10px;
+
+}
+
+/*** End of Admin components ***/
+
 section#manual {
 
 	margin-top: 3%;
