--- a/client/header/header.css
+++ b/client/header/header.css
@@ -268,12 +268,20 @@ ul.products_ref {
 	font-size: 0.55em;
 	position: absolute;
 	background-color: #2b285f;
-	min-width: 300px;
 	padding: 5px;
-	margin-left: -4%;
 	border: 1px solid #fff;
 	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.5);
-	z-index: 1;
+	z-index: 100;
+
+}
+
+@media (max-width: 767px) {
+
+	ul.products_ref {
+
+		min-width: 300px;
+
+	}
 
 }
 
@@ -289,12 +297,10 @@ ul.biomodels_list {
 	font-size: 0.55em;
 	position: absolute;
 	background-color: #2b285f;
-	min-width: 300px;
 	padding: 5px;
-	margin-left: -4%;
 	border: 1px solid #fff;
 	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.5);
-	z-index: 1;
+	z-index: 100;
 
 }
 
