--- a/client/simulators/simulators.css
+++ b/client/simulators/simulators.css
@@ -128,7 +128,7 @@ button.delete_simulator {
 
 button.delete_simulator:hover {
 
-	color: #333;
+	color: #2b285f;
 
 }
 
@@ -302,7 +302,7 @@ button.delete_step {
 
 button.delete_step:hover {
 
-	color: #333;
+	color: #2b285f;
 
 }
 
