--- a/client/header/header.css
+++ b/client/header/header.css
@@ -8,7 +8,7 @@
 
 div.admin_panel {
 
-	background-color: #333;
+	background-color: rgba(43, 40, 95, 0.75);
 	color: #fff;
 
 }
@@ -127,7 +127,45 @@ nav ul li {
 	color: #fff;
 	text-align: center;
 	font-size: 1.5em;
-	padding: 0 1%;
+
+}
+
+nav ul li ul {
+
+	display: none;
+	font-size: 0.55em;
+	position: absolute;
+	background-color: #2b285f;
+	padding: 5px;
+	border: 1px solid #fff;
+	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.5);
+	z-index: 100;
+
+}
+
+nav ul li ul li {
+
+	display: block;
+
+}
+
+@media (min-width: 768px) {
+
+	nav ul li {
+
+		padding: 0 1%;
+
+	}
+
+}
+
+@media (max-width: 767px) {
+
+	nav ul li ul {
+
+		width: 100%;
+
+	}
 
 }
 
@@ -259,54 +297,6 @@ nav a:hover {
 		display: none;
 
 	}
-
-}
-
-ul.products_ref {
-
-	display: none;
-	font-size: 0.55em;
-	position: absolute;
-	background-color: #2b285f;
-	padding: 5px;
-	border: 1px solid #fff;
-	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.5);
-	z-index: 100;
-
-}
-
-@media (max-width: 767px) {
-
-	ul.products_ref {
-
-		min-width: 300px;
-
-	}
-
-}
-
-ul.products_ref li {
-
-	display: block;
-
-}
-
-ul.biomodels_list {
-
-	display: none;
-	font-size: 0.55em;
-	position: absolute;
-	background-color: #2b285f;
-	padding: 5px;
-	border: 1px solid #fff;
-	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.5);
-	z-index: 100;
-
-}
-
-ul.biomodels_list li {
-
-	display: block;
 
 }
 
