--- a/client/main.css
+++ b/client/main.css
@@ -4,7 +4,7 @@
 
 body {
 
-	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif !important;
+	font-family: Arial, Helvetica, sans-serif !important;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
 	-moz-user-select: none;
@@ -77,7 +77,6 @@ div#wrapper {
 section#main {
 
 	margin: 0 auto;
-	padding-bottom: 125px;
 
 }
 
@@ -101,11 +100,23 @@ section#main {
 
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
+
+	section#main {
+
+		padding-bottom: 125px;
+		width: 80%;
+
+	}
+
+}
+
+@media (max-width: 767px) {
 
 	section#main {
 
 		width: 90%;
+		padding-bottom: 175px;
 
 	}
 
