--- a/client/news/news.css
+++ b/client/news/news.css
@@ -15,7 +15,7 @@ blockquote {
 
 section.news_with_text {
 
-	margin-bottom: 5%;
+	margin-top: 5%;
 	padding-bottom: 5%;
 	border-bottom: 1px solid #2b285f;
 
